--- a/public/assets/i18n/en/translation.json
+++ b/public/assets/i18n/en/translation.json
@@ -23,6 +23,8 @@
     },
     "general": {
         "action": {
+            "yes"   : "Yes",
+            "no"    : "No",
             "accept": "Accept",
             "close": "Close",
             "cancel": "Cancel",
