--- a/public/assets/i18n/es/translation.json
+++ b/public/assets/i18n/es/translation.json
@@ -23,6 +23,8 @@
     },
     "general": {
         "action": {
+            "yes"   : "Sí",
+            "no"    : "No",
             "accept": "Aceptar",
             "close": "Cerrar",
             "cancel": "Cancelar",
